Force sync local changes